Check properly pointer inequality from dngettext

If original and translation are same, dngettext will return
the original pointer, which is generally fine, except in
the corner cases where e.g. msgstr[1] is same as msgid.
Therefore check for pointer difference only with msgid or
only with msgid_plural, and not with both.

BUG: 372681